applications/minio-buckets/bom.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bom-images
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/upstream-vhost: bom-images.s3.inf-k8s.net
    nginx.ingress.kubernetes.io/configuration-snippet: |
      real_ip_header CF-Connecting-IP;
spec:
  ingressClassName: nginx
  rules:
    - host: bom-images.anurag.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
  tls:
    - secretName: bom-anurag-sh-tls
      hosts:
        - bom-images.anurag.sh
