applications/minio-buckets/images-maccas.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: images-maccas-route
spec:
  hostnames:
    - images.maccas.one
  parentRefs:
    - name: shared-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - name: minio
          port: 9000
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: rewrite-path-to-bucket
